--- a/main.tex
+++ b/main.tex
@@ -159,8 +159,12 @@ headsepline, % Uncomment to get a line under the header
 \newcommand{\Z}{$z$\xspace}
 
 %
+\newcommand{\hbo}{$h(t)$\xspace}
+\newcommand{\hbos}{$h^\text{(s)}(t)$\xspace}
 \newcommand{\CHB}{$C_{\text{HB}}(t)$\xspace}
 \newcommand{\SHB}{$S_{\text{HB}}(t)$\xspace}
+\newcommand{\CSHB}{$C^\text{(s)}_{\text{HB}}(t)$\xspace}
+\newcommand{\SSHB}{$S^\text{(s)}_{\text{HB}}(t)$\xspace}
 \newcommand{\LiFourW}{[Li$\cdot$(H$_2$O)$_4$]$^+$}
 %Renew the \AA command in order to have a space when we want
 \let\oldAA\AA
@@ -314,11 +318,12 @@ When calculating the SFG spectrum, I used a new approximation method. This metho
 Based on the calculation of MLWF, the parameterization of the spatial gradient of the components of dipole moment 
 and the polarization is realized. Therefore, the calculation of the correlation between the dipole moment and the polarization is 
 transformed into the calculation of the velocity correlation function.
-The theoretical value of the imaginary part of the nonlinear polarizability obtained by this method is the same as the experimental PS-SFG spectrum result.
+The theoretical value of the imaginary part of the nonlinear polarizability obtained by this method is the same as the experimental 
+Phase Sensitive Sum-Frequency Generation (PS-SFG) spectrum result.
 
-As a first system I have analyzed the behaviour of a salty water/vapor interface containing LiNO$_3$.
+As a first system I have analyzed the behaviour of a salty interface containing LiNO$_3$.
 Both the measured and calculated Vibrational Sum-Frequency Generation (VSFG) spectra shows a reduced intensity of the lower frequency portion region,
-when compared to the pure water/vapor interface.
+when compared to the water/vapor interface.
 This reduction is attributed to the H-bonds established between the \nitrate and the surrounding water molecules at the interface.
 This effects is only related to the presence of \nitrate at the water surface and is not affected by the presence of alkali metal ions.
 %I have shown that although the \Li can reside relative close to the water surface, also forming a water mediated
@@ -330,7 +335,7 @@ and cannot provide a microscopic interpretation of the spectra.
 Realistic models of the interface are required to address the perturbation of the ion on the water surface.
 
 %
-From the results of nonlinear susceptibilities, I conclude that these water molecules at the water/vapor interfaces of LiI, NaI, and KI solutions are participating
+From the results of nonlinear susceptibilities, I conclude that these water molecules at the interfaces of LiI, NaI, and KI solutions are participating
 in weaker H-bonds, compared with those at the pure water surface.
 The origin of the characteristics comes from a unique distribution of \I ions and alkali metal cations,
 which form a double layer over the thickness on the order of 5--10 \A.
@@ -349,7 +354,7 @@ The basic idea of this method is also applied to general interface systems, such
 The difference between the HB dynamics outside the first shell of the \Li and that of nitrate-water Hydrogen (H-) bonds
 at interfaces is not visible from the values of the HB relaxation time. 
 %They reflect the difference between HB dynamics in bulk water and that at the water/vapor interfaces.
-For the water/vapor interface of alkaline iodine solutions, I also find that the cations does not alter the H-bonding network 
+For the interface of alkaline iodine solutions, I also find that the cations does not alter the H-bonding network 
 outside the first hydration shell of the cations themselves.
 %It is concluded that no long-range structural-changing effects for alkali metal cations.
 Through Solvation shell HB (SHB) dynamics, I obtained the HB dynamics for the H-Bonds between water molecules in the ion's 
@@ -365,7 +370,7 @@ In contrast, the HB dynamics for the H-bonds between water molecules in the solv
 \begin{acknowledgements}
 \addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
 I wish to express my sincere gratitude to my supervisor,
-Prof. Dr. Marilore Sulpizi for her excellent guidance during my research, and her detailed and valuable advice for my writing.
+Prof. Dr. Marilore Sulpizi for her excellent guidance during my doctoral studies, and her detailed and valuable advice for my writing.
 I thank her for bringing me into interesting and novel areas of density functional theory-based molecular dynamics simulation 
 and interface physics and chemistry. By communicating with her, I was implicitly and positively affected. 
 She is rigorous in academic studies, optimistic and active, and has a wide range of interests. 
@@ -373,10 +378,14 @@ All these have kept in my heart and gave me greater confidence in future scienti
 
 %
 I wish to thank Prof. Dr. Thomas Kühner, Dr. Giovanni Settanni, PD Dr. Peter
-Virnau, Dr. Hans Behringer and Prof. Dr. Thomas Speck in the Institute for
-Physics for leading me to the fundamental statistical physics and excellent lectures
+Virnau, Dr. Hans Behringer and Prof. Dr. Thomas Speck at the institute for
+physics for leading me to the fundamental statistical physics and excellent lectures
 and discussions. I am grateful to Prof. Dr. Friederike Schmid and Prof. Dr. Kurt
 Binder for their talks and guidance.
+
+%
+I thank Prof. Dr. Harvey Meyer at the institute for nuclear physics. 
+I feel very honored to be a teaching assistant in his quantum field theory course. I have benefited a lot from his wonderful teaching methods, exercises, and questions and answers with students in his class.
 
 %
 I am grateful to Dr. R\'emi Khatib for programing skills and helpful guidance on
@@ -386,8 +395,8 @@ thank Leila Salimi, Isidro Lorenzo Geada, Santosh Kumar Meena and Anusha Lalitha
 at the Institute for Physics, for their encouragement and assistance.
 
 %
-I thank Prof. Honggang Luo and Prof. Haiping Fang for their great help in my study during my PhD. 
-The cooperation and discussions with Dr. Guosheng Shi, Dr. Bo Zhou and Dr. Chunlei Wang have benefited me a lot. 
+I thank Prof. Honggang Luo, Prof. Haiping Fang and Prof. Haijun Zhou for their great help in my study during my doctoral studies. 
+The cooperation and discussions with Dr. Guosheng Shi, Dr. Junming Shao, Dr. Bo Zhou and Dr. Chunlei Wang have benefited me a lot. 
 I express my sincere thanks to them.
 
 %
