--- a/example.bib
+++ b/example.bib
@@ -13,6 +13,13 @@
   year={1970},
   publisher={Dover Publ.}
 }
+@BOOK{Fleming86,
+    author = {G. R. Fleming},
+    title = {Chemical Applications of Ultrafast Spectroscopy},
+    publisher = {Oxford University Press, New York},
+    year = {1986},
+    isbn = {}
+}
 @BOOK{MTD,
     author = {M. T. Dove},
     title = {{Introduction to Lattice Dynamics}},
@@ -3094,7 +3101,7 @@ doi = {10.1063/5.0007045},
 URL = {https://doi.org/10.1063/5.0007045},
 eprint = {https://doi.org/10.1063/5.0007045}
 }
-@ARTICLE{Perry03,
+@ARTICLE{Perry2003,
     author = {A. Perry and H. Ahoborn and B. Space and P. B. Moore},
     title = {{A Combined Time Correlation Function and Instantaneous Normal Mode Study of the Sum Frequency Generation Spectroscopy of the Water/Vapor Interface}},
     journal = {J. Chem. Phys.},
@@ -3799,9 +3806,10 @@ abstract= {{We present the first infrared photon echo study of liquid water. For
 author = {R. Jimenez and G. R. Fleming and P. V. Kumar and M. Maroncelli},
 title = {{Femtosecond Solvation Dynamics of Water}},
 journal = {Nature},
+doi ={https://doi.org/10.1038/369471a0},
 year = {1994},
 volume = {369},
-pages = {471},
+pages = {471-473},
 abstract= {{The timescale of the response of solvent molecules to electronic rearrangement of solute molecules has a critical influence on the rates of chemical reactions in liquids1–10. In particular, if the solvent cannot adapt quickly enough to this rearrangement as the reactants pass through the transition state, the evolving products may recross the free-energy barrier, reducing the reaction rate. Computer simulations have shown11–18 that the response of a solvent to a change in solute charge distribution is strongly bimodal: there is an initial ultrafast response owing to inertial (mainly libra-tional) motions of the solvent molecules, followed by a slow component owing to diffusive motions. Water seems to be by far the 'fastest' solvent studied so far: simulations predict that well over half of the solvation response for atomic solutes is inertial, happening on a timescale of about 20 femtoseconds12,13. The presence of this ultrafast component implies that solvent friction plays an important role in many aqueous charge-transfer processes9,10,19–21. Experimental verification of this prediction has been lacking, however, in part because of the difficulty of obtaining sufficient time resolution. Here we present experimental measurements of the ultrafast solvation dynamics of a coumarin salt in water. When considered in conjunction with computer simulations, our results demonstrate that a solvent response on a timescale faster than 50 fs can dominate aqueous solvation dynamics.
 }}
 }
@@ -7222,16 +7230,6 @@ number={2},
 pages = {027401},
 abstract= {{We present the first infrared photon echo study of liquid water. For the O-H stretch vibration of HDO in D2O, fs FWM expriments reveal an extraordinary short pure dephasing time T2* on the order of 90 fs. This unusually fast time scale of dephasing is rationalized by taking into account the large anharmonicity of the hydrogen bonded O-H strtching mode. }}
 }
-@ARTICLE{Jimenez94,
-author = {R. Jimenez and G. R. Fleming and P. V. Kumar and M. Maroncelli},
-title = {{Femtosecond Solvation Dynamics of Water}},
-journal = {Nature},
-year = {1994},
-volume = {369},
-pages = {471},
-abstract= {{The timescale of the response of solvent molecules to electronic rearrangement of solute molecules has a critical influence on the rates of chemical reactions in liquids1–10. In particular, if the solvent cannot adapt quickly enough to this rearrangement as the reactants pass through the transition state, the evolving products may recross the free-energy barrier, reducing the reaction rate. Computer simulations have shown11–18 that the response of a solvent to a change in solute charge distribution is strongly bimodal: there is an initial ultrafast response owing to inertial (mainly libra-tional) motions of the solvent molecules, followed by a slow component owing to diffusive motions. Water seems to be by far the 'fastest' solvent studied so far: simulations predict that well over half of the solvation response for atomic solutes is inertial, happening on a timescale of about 20 femtoseconds12,13. The presence of this ultrafast component implies that solvent friction plays an important role in many aqueous charge-transfer processes9,10,19–21. Experimental verification of this prediction has been lacking, however, in part because of the difficulty of obtaining sufficient time resolution. Here we present experimental measurements of the ultrafast solvation dynamics of a coumarin salt in water. When considered in conjunction with computer simulations, our results demonstrate that a solvent response on a timescale faster than 50 fs can dominate aqueous solvation dynamics.
-}}
-}
 @ARTICLE{Frank45a,
 author = {H. S. Frank},
 title = {{Free Volume and Entropy in Condensed Systems I. General Principles, Fluctuation Entropy and Free Volume in some Monatomic Crystals}},
@@ -8875,15 +8873,6 @@ abstract = { Arguably the most important liquid in our existence, water continue
 	eprint = {https://science.sciencemag.org/content/287/5462/2461.full.pdf},
 	journal = {Science}
 }
-@ARTICLE{Jimenez1994,
-author = {Jimenez, R. and Fleming, G. and Kumar, P and Maroncelli, M.},
-title = {{Femtosecond Solvation Dynamics of Water}},
-journal = {Nature},
-year = {1994},
-volume = {369},
-doi ={https://doi.org/10.1038/369471a0},
-pages = {471-473}
-}
 @article{Smith1994,
 author = {Smith,David E.  and Dang,Liem X. },
 title = {Computer simulations of NaCl association in polarizable water},
@@ -9002,6 +8991,69 @@ volume = {8},
 number ={13},
 pages = {3133-3141},
 abstract= {{We provide a detailed description of the structure of water at the interface with the air (liquid–vapor LV interface) from state-of-the-art DFT-based molecular dynamics simulations. For the first time, a two-dimensional (2D) H-bond extended network has been identified and fully characterized, demonstrating that interfacial water is organized into a 2D sheet with H-bonds oriented parallel to the instantaneous surface and following its spatial and temporal oscillations. By analyzing the nonlinear vSFG (vibrational sum frequency generation) spectrum of the LV interface in terms of layer-by-layer signal, we demonstrate that the 2D water sheet is solely responsible for the spectral signatures, hence providing the interfacial 3.5 Å thickness effectively probed in nonlinear interfacial spectroscopy. The 2D H-bond network unraveled here is the essential key to rationalize macroscopic properties of water–air interfaces, as demonstrated here for spectroscopy and the surface potential.}}
+}
+@ARTICLE{Jonas96,
+author = {Jonas, David M. and Lang, Matthew J. and Nagasawa, Yutaka and Joo, Taiha and Fleming, Graham R.},
+title = {{Pump-Probe Polarization Anisotropy Study of Femtosecond Energy Transfer within the Photosynthetic Reaction Center of Rhodobacter sphaeroides R26}},
+doi={10.1021/jp960708t},
+url={https://doi.org/10.1021/jp960708t},
+journal = {J. Phys. Chem.},
+year = {1996},
+volume = {100},
+number ={20},
+pages = {12660-12673}
+}
+@ARTICLE{Farrow08,
+author = {Farrow, Darcie A and Qian, Wei and Smith, Eric R. and Ferro, Allison A and Jonas, David M.},
+title = {{Polarized Pump-probe Measurements of Electronic Motion via a Conical Intersection}},
+journal = {J. Chem. Phys.},
+year = {2006},
+volume = {128},
+pages = {144510-144531}
+}
+@article{Zahariev13,
+author = {Zahariev, F. and Leang, S. S. and Gordon, Mark S.},
+title = {Functional derivatives of meta-generalized gradient approximation (meta-GGA) type exchange-correlation density functionals},
+journal = {J. Chem. Phys.},
+volume = {138},
+number = {24},
+pages = {244108},
+year = {2013},
+doi = {10.1063/1.4811270},
+URL = { 
+        https://doi.org/10.1063/1.4811270
+},
+eprint = { 
+        https://doi.org/10.1063/1.4811270   
+}
+}
+@ARTICLE{Jedlovszky04,
+author = {Jedlovszky,P. and Vincze, \'A. and Horvai, G.},
+title = {{Full description of the orientational statistics of molecules near to interfaces. Water at the interface with CCl$_4$}},
+journal = {Phys. Chem. Chem. Phys.},
+year = {2004},
+volume = {6},
+number ={8},
+pages = {1874-1879},
+doi = {10.1039/b313231p},
+url= {
+https://pubs.rsc.org/en/content/articlelanding/2004/cp/b313231p/unauth#!divAbstract
+}
+}
+@article{Tsuruta10,
+abstract = {The excellent biocompatibility of PMEA was ascribed by Tanaka to the predominant population of intermediate water in the hydrated polymer matrix. The intermediate water concept was examined using the 'nano-plate model' on the basis of new results (by Morita) of a time-resolved IR study on the water sorption process into PMEA. The examination showed that the image picture proposed by Tanaka concerning the role of intermediate water was in consistent with experimental results so far obtained. Morita showed that the intermediate water exhibited a strong peak at 3400 cm-1 in its IR spectrum. Water sorption profiles of MMA, PEG and PMVE were found to be similar to that of PMEA. It was shown that the biocompatibility of these polymers could be explained by the intermediate water concept. It was also pointed out that PVP and PDMAA have a considerable amount of intermediate water under appropriate circumstances. The PHEMA-water system showed neither clear peak for cold crystallization in DSC chart, nor the strong peak at 3400 cm-1 in its IR spectrum, because the PHEMA system did not contain enough intermediate water to show similar behavior to PMEA. The hydrated PHEMA matrix contains a stable network structure of water molecules including the nodes of OH groups of its side-chains. In the stable network system, most water molecules should be hydrogen bonded strongly to form non-freezing water, but not intermediate water. The inferior biocompatibility of PHEMA was ascribed to the stable network structure of water molecules. Some of the PHEMA co-polymers, on the other hand, were found to have highly improved biocompatibility. Mechanism for the improvement was discussed in terms of loosening the network structure, which could be brought about by introducing ionic groups or branching to the polymer chains through co-polymerization with appropriate 'key monomers'. The mobility of polymer chains, as well as the population of three kinds of water in polysaccharide molecules in aqueous medium could change in response to their chemical structure such as nature of ionic groups, the degree of branching, etc. Polysaccharides located at the utmost-outer layer of blood cells probably possess a loosened network structure to form soft biological surface where intermediate water predominates. Cellulose, on the other hand, has a common feature with PHEMA in the sense of predominance of the non-freezing water in its hydrated system. Note: The word 'biocompatibility' is used in general as the term evaluating properties of materials which do not cause adverse effect when the materials come into contact with living organisms, such as proteins, biological cells and tissues. This review paper primarily deals with 'biocompatibility' of polymer materials against various biological elements in blood flow system. {\textcopyright} 2010 Koninklijke Brill NV, Leiden.},
+author = {Tsuruta, Teiji},
+doi = {10.1163/092050610X488269},
+file = {:home/gang/Lib1--Sulpizi/Ref_by_name/T/Tsuruta10.pdf:pdf},
+issn = {15685624},
+journal = {Journal of Biomaterials Science, Polymer Edition},
+keywords = {Poly(2-methoxyethyl acrylate) (PMEA),biocompatibility,intermediate water,poly(2-hydroxyethyl methacrylate) (PHEMA)},
+number = {14},
+pages = {1831-1848},
+pmid = {20573318},
+title = {{On the role of water molecules in the interface between biological systems and polymers}},
+volume = {21},
+year = {2010}
 }
 @ARTICLE{,
 author = {},
