March6: Hardest first!

--- a/example.bib
+++ b/example.bib
@@ -3016,7 +3016,7 @@ volume="113",
 pages="2082-2087 ",
 url=""
 }
-@ARTICLE{DEO07,
+@ARTICLE{Otten2007,
     author="Otten, D. E. and Petersen, P. B. and Saykally, R. J.",
     title={{Observation of Nitrate Ions at the Air/Water Interface by UV-Second Harmonic Generation}},
     journal="Chem. Phys. Lett.",
@@ -3025,7 +3025,7 @@ url=""
     issue = {4-6},
     doi = {10.1016/j.cplett.2007.10.081},
     url = {https://www.sciencedirect.com/science/article/abs/pii/S0009261407014017},
-    pages={261--265}
+    pages={261-265}
 }
 @Article{mundy_ann_rev13,
 author="Douglas J. Tobias and Abraham C. Stern and Marcel D. Baer and  Yan Levin and C.J. Mundy",
@@ -9054,6 +9054,20 @@ pmid = {20573318},
 title = {{On the role of water molecules in the interface between biological systems and polymers}},
 volume = {21},
 year = {2010}
+}
+@article{Vrbka2004,
+author = {Lubos Vrbka and Martin Mucha and Babak Minofar and Pavel Jungwirth and Eric C. Brown and Douglas J. Tobias},
+title = {Propensity of soft ions for the air/water interface},
+journal = {Current Opinion in Colloid \& Interface Science},
+volume = {9},
+number = {1},
+pages = {67-73},
+year = {2004},
+issn = {1359-0294},
+doi = {https://doi.org/10.1016/j.cocis.2004.05.028},
+url = {https://www.sciencedirect.com/science/article/pii/S1359029404000330},
+keywords = {Propensity, Soft ions, Air/water interface},
+abstract = {Major recent advances: Results of molecular dynamics simulations with polarizable force fields, supported by surface sensitive experiments, indicate that the propensity of atomic and hydrophilic molecular ions for the air/water interface exhibits strong ion specificity. While hard, non-polarizable ions are repelled from the interface, soft, polarizable ions exhibit surface affinity.}
 }
 @ARTICLE{,
 author = {},
