--- a/main.tex
+++ b/main.tex
@@ -51,7 +51,6 @@ headsepline, % Uncomment to get a line under the header
 \addbibresource{example.bib} % The filename of the bibliography
 
 \usepackage[autostyle=true]{csquotes} % Required to generate language-dependent quotes in the bibliography
-
 %====================
 % To strike out sth
 \usepackage{calc}
@@ -73,7 +72,7 @@ headsepline, % Uncomment to get a line under the header
 \usepackage{wrapfig,lipsum,booktabs}
 \usepackage{setspace}
 \usepackage{enumerate}
-\usepackage{subfigure}
+\usepackage[]{subfig}
 %\usepackage{fancyhdr}
 \usepackage{eucal}
 \usepackage[below]{placeins}
