--- a/main.tex
+++ b/main.tex
@@ -157,6 +157,10 @@ headsepline, % Uncomment to get a line under the header
 \newcommand{\Y}{$y$\xspace}
 \newcommand{\Z}{$z$\xspace}
 
+
+%
+\newcommand{\rt}{$t_\text{t}$\xspace}
+
 %
 \newcommand{\hbo}{$h(t)$\xspace}
 \newcommand{\hbos}{$h^\text{(s)}(t)$\xspace}
