--- a/example.bib
+++ b/example.bib
@@ -1553,7 +1553,7 @@ ions. The effects of ions on aqueous interfaces have drawn renewed interest for 
     volume = {78},
     pages = {1304}
 }
-@article{SC02,
+@article{Chowdhuri2002,
   title = {{Hydrogen Bonds in Aqueous Electrolyte Solutions: Statistics and Dynamics Based on Both Geometric and Energetic Criteria}},
   author = {Chowdhuri, Snehasis and Chandra, Amalendu},
   journal = {Phys. Rev. E},
@@ -4888,21 +4888,6 @@ To obtain the vibrations with the highest frequecies $\nu_\text{max}$, the sampl
     year = {2002},
     volume = {66},
     pages = {085401}
-}
-@ARTICLE{AC00,
-    author = {A. Chandra}, 
-    title = {{Effects of Ions Atmosphere on Hydrogen-Bond Dynamics in Aqueous Electrolyte Solutions}},
-    journal = {Phys. Rev. Lett.},
-    year = {2000},
-    volume = {85},
-    number = {4},
-    pages = {768(4)},
-    abstract = {{We have performed a series of molecular dynamics simulations of aqueous NaCl and KCl solutions
-        at different concentrations to investigate the effects of ion atmosphere on the dynamics of water-water
-        hydrogen bonds at room temperature. The average number of hydrogen bonds per water molecule
-        decreases with increase of ion concentration. The dynamics of hydrogen-bond breaking is found 
-        to accelerate somewhat and that of hydrogen-bond structural relaxation, which occurs at a longer time scale,
-        is found to slow down with increasing ion concentration for both NaCl and KCl solutions.}}
 }
 @ARTICLE{Ferrario1990,
     author = {M. Ferrario and M. Haughney and R. McDonald M. L. Klein },
@@ -8566,23 +8551,22 @@ abstract ={},
 URL = {https://www.sciencedirect.com/science/article/pii/S1359029404000330},
 journal = {Current Opinion in Colloid \& Interface Science} 
 }
-@ARTICLE{Chandra00,
-title = "Effects of Ions Atmosphere on Hydrogen-Bond Dynamics in Aqueous Electrolyte Solutions",
-journal = "Phys. Rev. Lett.",
-volume = "85",
-number = "4",
-pages = "768-771",
-year = "2000",
-issn = "",
-doi = "",
-url = " ",
-author = "Amalendu Chandra ",
-abstract = "We have performed a series of molecular dynamics simulations of aqueous NaCl and KCl solutions
-at different concentrations to investigate the effects of ion atmosphere on the dynamics of water-water
-hydrogen bonds at room temperature. The average number of hydrogen bonds per water molecule
-decreases with increase of ion concentration. The dynamics of hydrogen-bond breaking is found 
-to accelerate somewhat and that of hydrogen-bond structural relaxation, which occurs at a longer time scale,
-is found to slow down with increasing ion concentration for both NaCl and KCl solutions.",
+@ARTICLE{Chandra2000,
+    author = {Chandra, Amalendu}, 
+    title = {{Effects of Ions Atmosphere on Hydrogen-Bond Dynamics in Aqueous Electrolyte Solutions}},
+    journal = {Phys. Rev. Lett.},
+    year = {2000},
+    volume = {85},
+    number = {4},
+    pages = {768-771},
+    doi = "",
+    url = " ",
+    abstract = {{We have performed a series of molecular dynamics simulations of aqueous NaCl and KCl solutions
+        at different concentrations to investigate the effects of ion atmosphere on the dynamics of water-water
+        hydrogen bonds at room temperature. The average number of hydrogen bonds per water molecule
+        decreases with increase of ion concentration. The dynamics of hydrogen-bond breaking is found 
+        to accelerate somewhat and that of hydrogen-bond structural relaxation, which occurs at a longer time scale,
+        is found to slow down with increasing ion concentration for both NaCl and KCl solutions.}}
 }
 @ARTICLE{FuHB15,
 title = "Photosensitized Production of Atmospherically Reactive Organic Compounds at the Air/Aqueous Interface",
